@@ -5,8 +5,8 @@
 #' @param Data A matrix of single-cell expression where rows
 #' are genes and columns are samples (cells). \code{Data}
 #' can be of class \code{SummarizedExperiment} (the
-#' assays slot contains the expression matrix and
-#' is named "Counts") or just matrix.
+#' assays slot contains the expression matrix,
+#' is named "Counts"), just \code{matrix} or sparse matrix.
 #' @param  BETA_vec A vector of capture efficiencies
 #' of cells.
 #' @param PRIORS (Need to be specified for efficiency
