@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/PRIOR_FUNCTIONS.R
+% Please edit documentation in R/sup_funs.R
 \name{AdjustSIZE_fun}
 \alias{AdjustSIZE_fun}
 \title{Adjust MME size estimate}
