@@ -1,20 +1,18 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/PRIOR_FUNCTIONS.R
-\name{EstPrior}
-\alias{EstPrior}
+% Please edit documentation in R/RcppExports.R
+\name{EstPrior_sprcpp}
+\alias{EstPrior_sprcpp}
 \title{Estimate size and mu for Negative Binomial distribution
-for each gene using MME method}
+for each gene using MME method (Rcpp version, sp_mat)}
 \usage{
-EstPrior(Data, verbose = TRUE)
+EstPrior_sprcpp(Data)
 }
 \arguments{
 \item{Data}{A matrix of single-cell expression where rows
 are genes and columns are samples (cells). \code{Data}
 can be of class \code{SummarizedExperiment} (the
-assays slot contains the expression matrix,
-is named "Counts"), just \code{matrix} or sparse matrix.}
-
-\item{verbose}{print out status messages. Default is TRUE.}
+assays slot contains the expression matrix and
+is named "Counts") or just matrix.}
 }
 \value{
 List containing estimated mu and
@@ -31,8 +29,8 @@ They are parameters of negative binomial distribution.
 The variance is \eqn{mu + mu^2/size} in this parametrization.
 }
 \examples{
-data('EXAMPLE_DATA_list')
-#Return estimated mu and size for each gene using MME method.
-MME_est<-EstPrior(Data=EXAMPLE_DATA_list$inputdata[,seq(1,30)],
-verbose=TRUE)
+data("EXAMPLE_DATA_list")
+#Should not run by the users, it is used in prior estimation.
+\dontrun{
+}
 }
